fix: fixed toolbar aligning

--- a/front/src/components/Dashboard/Toolbar/Toolbar.scss
+++ b/front/src/components/Dashboard/Toolbar/Toolbar.scss
@@ -1,11 +1,10 @@
 .toolbar-main-box {
   height: 100%;
-  padding: 2rem 3rem;
+  padding: 2rem 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 2.5%;
   border-radius: 0.75rem;
 }
 
